fix: update endpoints and response types

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "vviital <vviital@tut.by>",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^1.19.3"
